[package]
name = "rust_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#for using cargo flamegraph (https://github.com/flamegraph-rs/flamegraph)
[profile.release]
debug = true

[dependencies]
clap = { version = "4.2.7", features = ["derive", "cargo"] }
colored = "2.0.0"
regex = "1.8.1"
