[package]
name = "cargo-ls-crates"
version = "0.3.2"
edition = "2021"
authors = ["bejker123 <1piotrkucharski@gmail.com>"]
license = "MIT"
description = "A tool to easily list installed cargo packages an their descriptions!"
readme = "README.MD"
homepage = "https://github.com/bejker123/cargo-crates"
repository= "https://github.com/bejker123/cargo-crates"
keywords = ["cli", "cargo","crates","crate"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#for using cargo flamegraph (https://github.com/flamegraph-rs/flamegraph)
[profile.release]
debug = true

[dependencies]
colored = "2.0.0"
regex = "1.8.1"
